--- a/s4054071_module1.ipynb
+++ b/s4054071_module1.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "**Question 7:** <a id=\"q-sc1-q7\"></a>\n",
     "\n",
-    "Considering Pain Relievers and Gain Creators, how could the SEEK products and services be improved?"
+    "Considering BAin Relievers and Gain Creators, how could the SEEK products and services be improved?"
    ]
   },
   {
