--- a/s4054071_module1.ipynb
+++ b/s4054071_module1.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "This portfolio is created by\n",
     "\n",
-    "| Name | TRAN HOANG NGUYEN |\n",
+    "| Name | TRANaaaaaaa HOANG NGUYEN |\n",
     "|---|---|\n",
     "| Student Id | S4054071 |\n",
     "| Semester | Semester 3 2023 |"
