--- a/s4054071_module1.ipynb
+++ b/s4054071_module1.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "This portfolio is created by\n",
     "\n",
-    "| Name | TRANaaaaa HOANG NGUYEN |\n",
+    "| Name | TRAN HOANG NGUYEsssN |\n",
     "|---|---|\n",
     "| Student Id | S4054071 |\n",
     "| Semester | Semester 3 2023 |"
@@ -1104,13 +1104,15 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "q4a;longtext;1"
+     "q4a;longtext;1",
+     "bold"
     ]
    },
    "source": [
-    "sda\n",
-    "\n",
-    "*My Answer*"
+    "**Patterns are usable:**\n",
+    "They work in various contexts and become a common paradigm. <br>\n",
+    "**Patterns help us design faster:**\n",
+    "They allow UX designers to focus on bigger experience problems, rather than reinventing the wheel.\n"
    ]
   },
   {
