--- a/s4054071_module02.ipynb
+++ b/s4054071_module02.ipynb
@@ -19,7 +19,9 @@
      "q0;shorttext;0"
     ]
    },
-   "source": []
+   "source": [
+    "asdasdsadsa"
+   ]
   },
   {
    "cell_type": "markdown",
