--- a/s4054071_module02.ipynb
+++ b/s4054071_module02.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "\n",
     "\n",
-    "When you submit your work electronically for studio components, you must agree to the [RMIT assessment declaration](https://www.rmit.edu.au/students/my-course/assessment-results/assessment) below.\n",
+    "u submit your work electronically for studio components, you must agree to the [RMIT assessment declaration](https://www.rmit.edu.au/students/my-course/assessment-results/assessment) below.\n",
     "\n",
     "1. I/we have not impersonated, or allowed myself to be impersonated by, any person for the purposes of this assessment.\n",
     "2. This assessment is my/our original work and no part of it has been copied from any other source except where due acknowledgement\n",
