--- a/s4054071_module02.ipynb
+++ b/s4054071_module02.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "\n",
     "\n",
-    "u submit your work electronically for studio components, you must agree to the [RMIT assessment declaration](https://www.rmit.edu.au/students/my-course/assessment-results/assessment) below.\n",
+    "\n",
     "\n",
     "1. I/we have not impersonated, or allowed myself to be impersonated by, any person for the purposes of this assessment.\n",
     "2. This assessment is my/our original work and no part of it has been copied from any other source except where due acknowledgement\n",
@@ -42,7 +42,7 @@
     "of detecting plagiarism.\n",
     "6. I/we give permission for a copy of my assessment to be retained by the university for review and comparison, including review by external examiners.\n",
     "7. I/we understand that:\n",
-    "    - Plagiarism is the presentation of the work, idea or creation of another person as though it is your own. It is a form of cheating and is a very serious academic offence that may lead to exclusion from the University. Plagiarised material can be drawn from, and presented in, written, graphic and visual form, including electronic data and oral presentations. Plagiarism occurs when the origin of the material used is not appropriately cited.\n",
+    "    - Plagiarism is the presentation of the work, idea or creation of another person as though it is your own. It is a form of cheating and is a very serious academdasdic offence that may lead to exclusion from the University. Plagiarised material can be drawn from, and presented in, written, graphic and visual form, including electronic data and oral presentations. Plagiarism occurs when the origin of the material used is not appropriately cited.\n",
     "    - Plagiarism includes the act of assisting or allowing another person to plagiarise or to copy my work.\n",
     "    \n",
     "    \n",
